# play_with_mnn

./: .gitignore  .gitmodules  NOTICE.md  README.md  download_resource.sh
00_doc/: image processing structure.drawio
01_script_convert/: onnx2mnn.bat  onnx2mnn.sh  tf2mnn.bat  tf2mnn.sh  tflite2mnn.bat  tflite2mnn.sh
InferenceHelper/: CMakeLists.txt  InferenceHelper.cpp  InferenceHelper.h  InferenceHelperMnn.cpp
ViewAndroid/: .gitignore  settings.gradle
ViewAndroid/app/: build.gradle
ViewAndroid/app/src/main/: AndroidManifest.xml
ViewAndroid/gradle/wrapper/: gradle-wrapper.properties
pj_mnn_cls_mobilenet_v2/: CMakeLists.txt  Main.cpp  main.cpp
pj_mnn_cls_mobilenet_v2/ImageProcessor/: CMakeLists.txt  ClassificationEngine.cpp  ImageProcessor.cpp  ImageProcessor.h
pj_mnn_cls_mobilenet_v2/image_processor/: CMakeLists.txt  classification_engine.cpp  classification_engine.h
pj_mnn_cls_mobilenet_v2_cam/: Main.cpp
pj_mnn_cls_mobilenet_v2_cam/ImageProcessor/: ImageProcessor.cpp
pj_mnn_depth_fsre/: README.md  main.cpp
pj_mnn_depth_fsre/image_processor/: CMakeLists.txt  depth_engine.cpp  image_processor.cpp
pj_mnn_det_yolov7/: README.md
pj_mnn_det_yolov7/image_processor/: detection_engine.cpp
pj_mnn_lane_ultra-fast-lane-detection_v2/: README.md
pj_mnn_lane_ultra-fast-lane-detection_v2/image_processor/: CMakeLists.txt  lane_engine.cpp  lane_engine.h
pj_mnn_perception_yolopv2/: README.md
pj_mnn_perception_yolopv2/image_processor/: CMakeLists.txt  detection_engine.cpp
pj_mnn_posenet_mobilenet_v1/: Main.cpp  main.cpp
pj_mnn_posenet_mobilenet_v1/ImageProcessor/: CMakeLists.txt  ImageProcessor.cpp  ImageProcessor.h  PoseEngine.cpp  PoseEngine.h
pj_mnn_posenet_mobilenet_v1/image_processor/: CMakeLists.txt  image_processor.cpp  pose_engine.cpp  pose_engine.h
pj_mnn_posenet_mobilenet_v1_cam/: CMakeLists.txt  Main.cpp
pj_mnn_posenet_mobilenet_v1_cam/ImageProcessor/: ImageProcessor.cpp
pj_mnn_posenet_mobilenet_v1_cam_android/ImageProcessor/: CMakeLists.txt  ImageProcessor.cpp
pj_mnn_posenet_mobilenet_v1_cam_android/ViewMain/: CMakeLists.txt
pj_mnn_ss_deeplabv3/: CMakeLists.txt  Main.cpp  main.cpp
pj_mnn_ss_deeplabv3/ImageProcessor/: CMakeLists.txt  ImageProcessor.cpp  SemanticSegmentationEngine.cpp  SemanticSegmentationEngine.h
pj_mnn_ss_deeplabv3/image_processor/: CMakeLists.txt  image_processor.cpp  semantic_segmentation_engine.cpp  semantic_segmentation_engine.h
pj_mnn_ss_deeplabv3_cam/: CMakeLists.txt  Main.cpp
pj_mnn_style_transfer/: main.cpp
pj_mnn_style_transfer/ImageProcessor/: CMakeLists.txt  StylePredictionEngine.cpp
pj_mnn_style_transfer/image_processor/: CMakeLists.txt  image_processor.cpp  style_prediction_engine.cpp  style_prediction_engine.h  style_transfer_engine.cpp  style_transfer_engine.h
resource/model/: deeplabv3_257_mv_gpu.mnn
(+10 files in other folders)
